# service-toMotion

./: .gitignore  Dockerfile  README.md  app.py  deploy  deploy.sh  docker-compose.yml  pyproject.toml  test.sh  tomotion.py  uwsgi.ini  words.txt
